<resources>
    <string name="google_map_api_key">AIzaSyAJfXJRLiN4GFnmVnR-AjpnNB8w_eXhyiw</string>
    <string name="app_name">college world</string>
    <string name="login">Log In</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Forget Password </string>
    <string name="new_user">New User?</string>
    <string name="sing_up">SignUp</string>
    <string name="remember_password">Remember Password ?</string>
    <string name="log_in">LogIn</string>
    <string name="registration">Register</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_your_password">Re Enter Your Password</string>
    <string name="enter_your_phone_no">Enter Your phone no</string>
    <string name="terms">I accept all terms and conditions</string>
    <string name="socialMedia">Or Create Account Using Social Media</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="top_college">Top College</string>
    <string name="profile">Profile</string>
    <string name="change_course">Change Course</string>
    <string name="reviews">Review</string>
    <string name="inquire">College Inquiry App</string>
    <string name="setting">Setting</string>
    <string name="college_world">College World</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="open">Open navigation drawer</string>
    <string name="state">State</string>
    <string name="close">Close navigation drawer</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="notification">Notifications</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="wish_list">Wish List</string>
    <string name="add_account">Add Account</string>
    <string name="log_out">Log Out</string>
    <string name="otp">OTP</string>
    <string name="reenter_password">ReEnter Password</string>
    <string name="send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="forget_password1">Forget Password </string>
    <string name="retry">Retry</string>
    <string name="connect">Connect</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_don_t_have_internet_connection">You don\'t have internet connection.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="course">Course</string>
    <string name="contact_subject">Subject</string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact Us</string>
    <string name="skills">Skills</string>
    <string name="rating">Rating</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="city">State</string>
    <string name="phone">Phone</string>
    <string name="new_profile">New Profile</string>
    <string name="remove_your_profile">Remove Your Profile</string>
    <string name="facebook_app_id">224234331940572</string>
    <string name="fb_login_protocol_scheme">fb224234331940572</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_no">Phone No</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="change_password">Change Password</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="current_password">Current Password</string>
    <string name="contactmessage">Message</string>
    <string name="banner_ad_unit_id">ca-app-pub-4449805132497725~2464002655</string>
    <string name="college_image">College image</string>
    <string name="course_and_fess">Course and Fess</string>
    <string name="college_name">College Name</string>
    <string name="apply">Apply</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="your_selection_will_personalize_what_you_are">Your Selection Will Personalize What You Are</string>
    <string name="select_stream">Select Stream</string>
    <string name="choice_college_name">Choice College Name</string>
    <string name="course_name">Course Name</string>
    <string name="enter_passing_year">Enter passing Year</string>
    <string name="enter_marks_obtained">Enter Marks Obtained</string>
    <string name="faculty_details">Faculty Details</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="enter_your_Birth_date">Enter Your Birth Date</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="gallery">Gallery</string>
    <string name="resend">Resend</string>
    <string name="personal_information">Personal Information</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="wishlist">WishList</string>
    <string name="percentage">Percentage</string>
    <string name="enter_your_percentage">Enter Your percentage</string>
    <string name="faculty">Faculty</string>
    <string name="description">Description</string>
    <string name="describe_your_experience">Describe Your Experience</string>
    <string name="todo">TODO</string>
    <string name="ratings">Rating:</string>
    <string name="placemen">Placemen</string>
</resources>