<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#00000000">


    <LinearLayout
        android:id="@+id/rlmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/optionColor">



        <TextView
            android:id="@+id/title"
            android:layout_marginStart="25dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/whiteOrange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/you_don_t_have_internet_connection"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="17sp" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:layout_weight="1"
                android:id="@+id/dialog_ok"
                android:layout_width="100dip"
                android:layout_height="40dip"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="50dp"
                android:background="#FF5722"
                android:text="@string/retry"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_weight="1"
                android:id="@+id/dialog_cancel"
                android:layout_width="100dip"
                android:layout_height="40dip"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="50sp"
                android:background="#FF5722"
                android:text="@string/connect"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>